fix word break on projects dashboard page

--- a/client/src/components/Projects/Projects.module.scss
+++ b/client/src/components/Projects/Projects.module.scss
@@ -95,6 +95,8 @@
     line-height: 1.1;
     padding: 24px 20px;
     position: absolute;
+    hyphens: auto;
+    word-break: break-word;
   }
 
   .project {
